feat: added bullmq, logging
